While loop ,do while loop